# cookiecutter-statdesk-scraper

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.scraper_slug}}/: .env.example  .gitignore  CLAUDE.md  README.md  config.py  notify.py  pipeline_flow.py  pipeline_warehouse_mirror.py  prefect.yaml  pyproject.toml
{{cookiecutter.scraper_slug}}/.github/workflows/: deploy.yml
{{cookiecutter.scraper_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  main.py
{{cookiecutter.scraper_slug}}/tests/: test_prefect_yaml.py  test_warehouse_mirror.py
