[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.scraper_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.scraper_description }}"
requires-python = ">=3.12"
authors = [{name = "StatDeskAU"}]
dependencies = [
    "click>=8.1",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "tenacity>=8.2",
]

[project.optional-dependencies]
prefect = [
    "prefect>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
# CI-only tooling. Kept out of `dev` so laptop devs running pytest
# don't pull in a CLI they don't use. CI installs `.[dev,prefect,ci]`.
# Pinned to an immutable commit SHA -- tags can be force-pushed and
# would let an attacker silently substitute the preflight package.
ci = [
    "statdesk-prefect-tools @ git+https://github.com/StatDeskAU/statdesk-prefect-tools.git@{{ cookiecutter.statdesk_prefect_tools_sha }}",
]

[project.scripts]
{{ cookiecutter.scraper_slug }} = "{{ cookiecutter.package_name }}.main:cli"

[tool.hatch.metadata]
# Required so `statdesk-prefect-tools @ git+https://...` (PEP 508 direct
# reference URL) is accepted by hatchling. Default is False -- direct
# refs are rejected to avoid surprise network installs from the index path.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.package_name }}"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"
